# xbee3-rs

./: Cargo.toml  README.md
.github/workflows/: examples.yml
examples/serialport/: Cargo.toml
examples/serialport/src/: main.rs
examples/stm32f401re/: Cargo.toml  rust-toolchain.toml
examples/stm32f401re-test/: build.rs
examples/stm32f401re-test/.cargo/: config.toml
examples/stm32f401re/.cargo/: config.toml
examples/stm32f401re/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: at.rs  buffer.rs  command.rs  error.rs  lib.rs  transport.rs
src/api/: checksum.rs  frames.rs  mod.rs
src/api/frames/: extended_transmit_status.rs  transmit_request.rs
src/at/: commandssrc.rs  gen_commands.go  mod.rs
src/at/commands/: ack_failures.rs  active_scan.rs  aes_encryption_key.rs  analog_voltage_reference.rs  api_enable.rs  api_output_options.rs  apply_changes.rs  associate_led_blink_time.rs  association_indication.rs  bluetooth_enable.rs  bluetooth_identifier.rs  bluetooth_mac_address.rs  bluetooth_power.rs  bootloader_version.rs  cca_failures.rs  cca_threshold.rs  clear_custom_defaults.rs  command_character.rs  command_mode_timeout.rs  commissioning_button.rs  compatibility_options.rs  configuration_crc.rs  coordinator_association.rs  cyclic_sleep_period.rs  cyclic_sleep_wake_time.rs  d0_timeout_timer.rs  d1_output_timeout_timer.rs  d2_output_timeout_timer.rs  d3_output_timeout_timer.rs  d4_output_timeout_timer.rs  d5_output_timeout_timer.rs  d6_output_timeout_timer.rs  d7_output_timeout_timer.rs  d8_output_timer.rs  d9_output_timer.rs  destination_address_high.rs  destination_address_low.rs  device_role.rs  device_type_identifier.rs  digital_output_level.rs  (+108 more)
src/embassy/: channel.rs  mod.rs
src/embassy/stm32/: uart.rs
src/tokio/: mod.rs
