[package]
name = "xbee3-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]

std = [
    "derive_more/std",
    "dep:tracing",
    "rand",
    "futures/std"
]

defmt = [
    "dep:defmt",
    "embassy-executor/defmt"
]

tokio = [
    "dep:tokio",
    "dep:tokio-util"
]

embedded = [
    "dep:embassy-sync",
    "dep:embedded-io",
    "dep:embedded-io-async",
    "dep:embassy-executor",

    "defmt",
]

stm32 = [
    "embedded",
    
    "embassy-executor/arch-cortex-m",
    "dep:embassy-stm32",
    "dep:cortex-m"
]

stm32f401re = [
    "stm32",

    "embassy-stm32/stm32f401re"
]

[dependencies]

strum_macros = { version = "0.27.1" }
futures = { version = "0.3", default-features = false }

# Desktop/Software packages
tracing = { version = "0.1.41", optional = true }
tokio = { version = "1.46.1", optional = true, features = ["sync", "rt"] }
tokio-util = { version = "0.7.15", optional = true }
rand = { version = "0.9.1", optional = true }

# Core/embedded-save error trait derrivatives.
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
    "display",
    "error",
    "from",
]}

# Dependencies used for embedded devices
defmt = { version = "1.0.1", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
embassy-stm32 = { version = "0.2.0", optional = true, features = [
    "defmt",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "chrono"
] }
embassy-sync = { version = "0.7.0", optional = true }
embassy-executor = { version = "0.7.0", optional = true, features = [ "executor-thread" ] }
cortex-m = { version = "0.7.6",  optional = true, features = ["critical-section-single-core"] }
